# chatsite

./: .env.sample  .gitignore  Dockerfile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt
chatroom/: apps.py  consumers.py  models.py  urls.py  views.py
chatroom/migrations/: 0001_initial.py  0002_changed_ordering.py
chatsite/: asgi.py  settings.py  urls.py  wsgi.py
init/: db.sql
templates/: chatroom.html  index.html
