[tool.poetry]
name = "chatsite"
version = "0.1.0"
description = "the django channels demo project for education purposes"
license = "MIT"
authors = [
    "Serhii Horodilov <sgorodil@gmail.com>"
]
readme = "README.rst"
repository = "https://github.com/shorodilov/chatsite.git"
keywords = ["python", "django", "channels", "websocket"]
classifiers = [
    "Framework :: Django :: 4",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Education"
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
channels = "^4.0.0"
daphne = "^4.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
